--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -43,6 +43,11 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(0.8);
+    }
   }
 
   &__nav {
@@ -100,6 +105,11 @@
     border: 1px solid $green;
     margin: 0 auto;
     text-decoration: none;
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(0.8);
+    }
 
     @include onTablet {
       margin: 0;
@@ -155,6 +165,11 @@
       transform: rotate(-90deg);
 
       padding: 0 0 0 20px;
+      transition: transform, 0.3s;
+
+      &:hover {
+        color: $green;
+      }
 
       &::after {
         content: " ";
