--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,5 +5,10 @@
   &--cross {
     height: 13px;
     width: 13px;
+    transition: transform, 0.3s;
+
+    &:hover {
+      transform: scale(0.8);
+    }
   }
 }
