--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -234,6 +234,10 @@
     bottom: 0;
     right: 0;
 
+    &:hover {
+      border-color: #0b241f;
+    }
+
     @include onDesktop {
       display: none;
     }
