compressed images, logos hover fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -49,7 +49,17 @@
 
   @media (min-width: 640px) {
     &__burger-close {
-      margin-top: 16px;
+      margin-right: 34px;
+      margin-top: 32px;
+  
+      &__burger-close-img {
+        transition-duration: $transition-time;
+  
+        :hover {
+          transform: rotate(45deg);
+          scale: 2;
+        }
+      }
     }
 
     &__content {
