--- a/src/styles/blocks/half-1.scss
+++ b/src/styles/blocks/half-1.scss
@@ -1,6 +1,6 @@
 .half-1 {
   min-height: 300px;
-  background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+  background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukr.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -20,6 +20,8 @@
     min-height: 384px;
 
     &__logo {
+      width: fit-content;
+
       margin-left: 40px;
     }
 
