--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,7 @@
 @import "./utils/grid";
 @import "./utils/header-menu";
 @import "./utils/header_top";
+@import "./utils/events";
+@import "./utils/gallery";
+@import "./utils/subscription";
+@import "./utils/footer";
