--- a/src/styles/utils/_body.scss
+++ b/src/styles/utils/_body.scss
@@ -3,11 +3,18 @@
   margin: 0;
 
   &__body {
+    box-sizing: border-box;
     margin: 0;
-    background-color: $colorGrey;
+    // background-color: $colorGrey;
 
     &--with-menu {
       overflow: hidden;
     }
   }
+}
+
+h1,
+h2,
+p {
+  margin: 0;
 }
