--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -16,3 +16,55 @@
   color: #fff;
   @content;
 }
+
+@mixin headOne {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 36px;
+  color: $colorText;
+}
+
+@mixin headTwo {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 28px;
+  color: $colorText;
+}
+
+@mixin paragraph {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  color: $colorParagraph;
+}
+
+@mixin event {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: $colorGreyText;
+}
+
+@mixin date {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: $colorGreen;
+}
+
+@mixin square {
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: url(../images/signs/square.svg);
+    background-repeat: no-repeat;
+    width: 10px;
+    height: 10px;
+    @content;
+  }
+}
