--- a/src/styles/utils/_header-menu.scss
+++ b/src/styles/utils/_header-menu.scss
@@ -15,21 +15,21 @@
   }
 
   &__container {
-    margin: 27px 20px;
     display: flex;
+    margin: 27px 20px;
+    min-width: min-content;
 
     @include onTablet {
       margin: 40px 35px;
     }
 
     @include onDesktop {
-      margin: 40px 60px 48px;
+      margin: 40px 50px 48px;
     }
   }
 
   &__cross {
     display: flex;
-    justify-content: center;
 
     &__item {
       width: 32px;
@@ -41,7 +41,7 @@
 
   &__center {
     @include onTablet {
-      justify-content: center;
+      justify-content: space-between;
       flex-grow: 1;
     }
   }
@@ -50,11 +50,11 @@
     display: flex;
     flex-direction: column;
     padding: 0;
-    max-width: 1080px;
+    max-width: 1200px;
 
     @include onTablet {
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       flex-grow: 1;
     }
 
@@ -67,12 +67,13 @@
       flex-grow: 1;
 
       @include onTablet {
+        padding-right: 10px;
         flex-direction: row;
         justify-content: space-evenly;
       }
     }
 
-    &__left {
+    &__left-right {
       min-width: max-content;
       padding-right: 15px;
     }
@@ -90,32 +91,45 @@
     line-height: 16px;
     color: #fff;
     text-decoration: none;
-  }
+    transition: transform 300ms;
 
-  &__stick {
-    @include onTablet {
-      display: flex;
-      justify-content: center;
-    }
-
-    &__item {
-      width: 100%;
-      height: 1px;
-      margin-bottom: 24px;
-      background-color: #fff;
-
-      @include onTablet {
-        margin-bottom: 0;
-        width: 145px;
-        transform: rotate(90deg) translateX(75px);
-      }
+    &:hover {
+      color: $colorText;
     }
   }
 
   &__block {
+    transform: translateX(-30px);
+
     @include onTablet {
       display: flex;
       flex-shrink: 1;
+      transform: translateX(0);
+    }
+
+    &__stick {
+      @include onTablet {
+        display: flex;
+        justify-content: center;
+        padding-right: 18px;
+      }
+
+      @include onDesktop {
+        padding-right: 110px;
+      }
+
+      &__item {
+        width: 100%;
+        height: 1px;
+        margin-bottom: 24px;
+        background-color: #fff;
+
+        @include onTablet {
+          margin-bottom: 0;
+          width: 1px;
+          height: 145px;
+        }
+      }
     }
 
     &__container {
@@ -144,6 +158,10 @@
         padding-right: 15px;
         font-weight: 600;
         line-height: 21px;
+      }
+
+      @include onDesktop {
+        padding-right: 30px;
       }
     }
 
