--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -1,22 +1,15 @@
 .header {
   position: relative;
+  height: 100vh;
 
   &__top-nav {
     margin: 0;
-
-    @include onTablet {
-      margin: 15px 34px 0;
-    }
-
-    @include onDesktop {
-      margin: 15px 55px 0;
-    }
 
     &__museum {
       position: absolute;
       background-image: url(../images/photos/actual-acts/Muzej.svg);
       width: 100%;
-      height: 300px;
+      height: 350px;
       right: 0;
       top: 0;
       background-repeat: no-repeat;
@@ -26,17 +19,14 @@
       z-index: 0;
 
       @include onTablet {
+        width: 42%;
+        height: 550px;
         margin-bottom: 88px;
-        height: 450px;
-        width: 39%;
-        transform: translateY(-15px);
       }
 
       @include onDesktop {
-        margin-bottom: 200px;
-        width: 58%;
+        width: 60%;
         height: 655px;
-        transform: translateY(-15px);
       }
     }
 
@@ -47,7 +37,7 @@
 
       @include onTablet {
         display: grid;
-        margin: 0;
+        margin: 0 0 40px;
         line-height: 72px;
       }
 
@@ -63,11 +53,11 @@
       z-index: 1;
 
       @include onTablet {
-        margin-right: 0;
+        margin: 15px 0 0 35px;
       }
 
       @include onDesktop {
-        margin-right: 0;
+        margin: 15px 0 0 45px;
       }
     }
 
@@ -76,15 +66,23 @@
     }
 
     &__logo {
-      margin-bottom: 200px;
+      margin-bottom: 250px;
       z-index: 1;
 
       @include onTablet {
-        margin-bottom: 40px;
+        margin-bottom: 0;
+        margin-top: 15px;
       }
 
       @include onDesktop {
         margin-bottom: 80px;
+      }
+
+      &__NAMU {
+        height: 61px;
+        @include onTablet {
+          height: 72px;
+        }
       }
     }
 
@@ -95,11 +93,12 @@
       margin: 0 23px;
 
       @include onTablet {
-        margin: 0;
+        margin: 0 0 0 35px;
         display: grid;
       }
 
       @include onDesktop {
+        margin: 0 0 0 45px;
         display: grid;
       }
 
@@ -119,7 +118,7 @@
         margin-bottom: 20px;
 
         @include onTablet {
-          margin-bottom: 38px;
+          margin-bottom: 40px;
         }
 
         @include onDesktop {
@@ -131,6 +130,7 @@
         margin: 0;
         font-family: "Montserrat", sans-serif;
         font-size: 45px;
+        line-height: 45px;
         color: $colorBlack;
 
         @include onTablet {
@@ -149,15 +149,16 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border: 1px solid $colorGreen;
       margin: 0 23px;
+      border: 1px solid $colorGreen;
 
       @include onTablet {
-        margin: 0;
+        margin: 0 0 0 35px;
         width: 260px;
       }
 
       @include onDesktop {
+        margin: 0;
         margin-left: 218px;
         width: 260px;
       }
@@ -176,26 +177,42 @@
         position: relative;
         background-image: url(../images/signs/Rectangle.svg);
         background-repeat: no-repeat;
-        height: 70px;
-        width: 70px;
+        height: 50px;
+        width: 50px;
         z-index: 0;
+        transition: transform 300ms;
+
+        &:hover {
+          background-image: none;
+          background-color: red;
+        }
+
+        @include onTablet {
+          height: 70px;
+          width: 70px;
+        }
 
         &::after {
           content: "";
           display: inline-block;
           position: absolute;
-          top: 45%;
-          right: 45%;
+          top: 40%;
+          right: 42%;
           background-image: url(../images/signs/right-white.svg);
           background-repeat: no-repeat;
           width: 7px;
           height: 12px;
           z-index: 1;
+
+          @include onTablet {
+            top: 43%;
+          }
         }
       }
     }
 
     &__act {
+      margin: 0;
       text-decoration: none;
       color: transparent;
       cursor: none;
@@ -203,11 +220,13 @@
       @include onDesktop {
         &__actions {
           position: relative;
+          margin-left: 45px;
           writing-mode: tb-rl;
           transform: rotate(180deg);
           font-family: "IBM Plex Sans", sans-serif;
           font-weight: 700;
           font-size: 14px;
+          cursor: pointer;
           color: $colorGreyText;
 
           &::before {
