--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -44,6 +44,7 @@
   }
 
   .footer__logo {
+    font-family: "Montserrat", Helvetica, sans-serif;
     font-weight: 700;
     font-size: 36px;
     color: #0f0e08;
@@ -54,6 +55,7 @@
   }
   
   .footer__social-media {
+    display: flex;
     
     .footer__inst {
       width: 24px;
@@ -139,8 +141,18 @@
   margin: 0;
 }
 
+.footer__last-day {
+  margin: 0 0 20px;
+}
+
+.footer__p {
+  margin: 0;
+  padding: 0;
+}
+
 .footer__weekend {
   display: inline;
+  font-family: "IBM Plex Sans", Helvetica, sans-serif;
   margin: 20px 0 0;
   padding: 20px 0 0;
 }
@@ -183,7 +195,6 @@
     display: none;
   }
 
-  
   .footer__button {
     width: 50px;
     height: 50px;
@@ -199,7 +210,6 @@
 }
 
 .footer__line {
-
   @include onPhone {
     display: none;
   }
@@ -218,7 +228,6 @@
 }
 
 .footer__line-second {
-
   @include onPhone {
     width: 280px;
     border-bottom: 2px solid rgba(26, 90, 76, 0.5);
@@ -274,6 +283,8 @@
 }
 
 .footer__copyright {
+  font-family: "IBM Plex Sans", Helvetica, sans-serif;
+  color: #0f0e08;
   width: max-content;
  
   @include onPhone {
