--- a/src/styles/bloks/third.block.scss
+++ b/src/styles/bloks/third.block.scss
@@ -40,6 +40,15 @@
   }
 }
 
+/* .photo {
+  cursor: pointer;
+  transition-duration: 1s;
+  
+  &:hover {
+    transform: scale(1.1);
+  }
+} */
+
 .galery__photo-1 {
 
   @include onPhone {
@@ -115,4 +124,23 @@
     grid-column: 9/13 ;
     grid-row: 3;
   }
+}
+
+.container {
+  @include onPhone {
+    display: block;
+  }
+
+  @include onTablet {
+    display: none;
+  }
+
+  @include onDesctop {
+    display: none;
+  }
+}
+
+.p {
+  width: 100px;
+  height: 100px;
 }
