--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,28 +11,46 @@
 @import "./bloks/footer.scss";
 
 .page {
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
     box-sizing: border-box;
   }
 
-  /* &__menu {
+  &__menu {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
 
     transform: translateX(-100%);
+    transition: transform 0.3s;
 
     &:target {
       transform: translateX(0);
+      overflow-y: hidden;
     }
-  } */
+  }
 }
 
 * {
   box-sizing: border-box;
-  font-family: "Cinzel", Helvetica, sans-serif;
-  /* font-family: "Montserrat", Helvetica, sans-serif; */
+  /* font-family: "Cinzel", Helvetica, sans-serif;
+  font-family: "Montserrat", Helvetica, sans-serif; */
+}
+
+.link {
+  text-decoration: none;
+  color: #0f0e08;
+  cursor: pointer;
+}
+
+.photo {
+  cursor: pointer;
+  transition-duration: 1s;
+  
+  &:hover {
+    transform: scale(1.1);
+  }
 }
