--- a/src/styles/bloks/main_content.scss
+++ b/src/styles/bloks/main_content.scss
@@ -146,8 +146,8 @@
   }
 
   .main__exhibition {
-    display: block;
-    font-family: "IBM Plex Sans", sans-serif;
+    /* display: block; */
+    font-family: "Montserrat", sans-serif;
     font-size: 16px;
     line-height: 16px;
     color: #687480;
@@ -182,6 +182,7 @@
   }
 
   .main__text {
+    font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 28px;
     font-style: 28px;
@@ -218,6 +219,7 @@
   .main__description {
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
+    color: #4e4e4e;
     line-height: 24px;
     text-align: center;
     margin: 0 0 60px;
