--- a/src/styles/bloks/menu.scss
+++ b/src/styles/bloks/menu.scss
@@ -15,7 +15,7 @@
     grid-template-columns: repeat(2, 130px);
     justify-content: center;
     gap: 20px;
-    margin: 0 20px 128px;
+    height: 480px;
   }
 
   @include onTablet {
@@ -23,7 +23,8 @@
     grid-template-columns: repeat(6, 90px);
     justify-content: center;
     gap: 30px;
-    margin: 0 0 133px;
+    margin: 0;
+    height: 225px;
   }
 
   @include onDesctop {
@@ -31,6 +32,7 @@
     grid-template-columns: repeat(12, 70px);
     gap: 30px;
     margin: 0;
+    height: 233px;
   }
 }
 
@@ -38,15 +40,36 @@
   width: 12px;
   height: 12px;
 
+  @include onPhone {
+    margin: 0 34px 0 0;
+  }
+  
+  @include onTablet {
+    margin: 0 44px 0 0;
+  }
+
   @include onDesctop {
     margin: 0 108px 0 0;
   }
+
 }
 
 .menu__all {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  @include onPhone {
+    grid-column: 1/2;
+    grid-row: 1;
+    margin: 27px 0 0;
+  }
+
+  @include onTablet {
+    grid-column: 1/2;
+    grid-row: 1;
+    margin: 40px 0 0;
+  }
 
   @include onDesctop {
     grid-column: 1/2;
@@ -71,6 +94,10 @@
       font-size: 16px;
     }
   }
+
+  .menu__text-2 {
+    margin: 0;
+  }
 }
 
 .menu__line {
@@ -78,19 +105,61 @@
   border-right: 1px solid #fff;
   margin: 40px 0 0;
 
+  @include onPhone {
+    display: none;
+  }
+  
+  @include onTablet {
+    display: block;
+    grid-column: 3;
+  }
+
   @include onDesctop {
+    display: block;
     grid-column: 6;
+  }
+}
+
+.menu__line-second {
+  width: 280px;
+  border-bottom: 1px solid #fff;
+  margin: 40px 0 0;
+
+  @include onPhone {
+    display: block;
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+  
+  @include onTablet {
+    display: none;
+  }
+
+  @include onDesctop {
+    display: none;
   }
 }
 
 .menu__container {
   display: flex;
   flex-direction: column;
-  margin: 40px 0 0;
+  
+  @include onPhone {
+    grid-column: 1/2;
+    grid-row: 3;
+    margin: 0;
+  }
 
-  @include onDesctop {
-    grid-column: 8/11;
+  @include onTablet {
+    grid-column: 4/6;
     grid-row: 1;
+    margin: 40px 0 0;
+  }
+  
+  @include onDesctop {
+    grid-column: 8/10;
+    grid-row: 1;
+    margin: 40px 0 0;
   }
 }
 
@@ -105,6 +174,18 @@
 
 .menu__second-container {
   display: flex;
+
+  @include onPhone {
+    flex-direction: column;
+  }
+  
+  @include onTablet {
+    flex-direction: row;
+  }
+
+  @include onDesctop {
+    flex-direction: row;
+  }
 }
 
 .menu__box {
@@ -131,12 +212,27 @@
 }
 
 .menu__weekend {
-  width: 200px;
   font-family: "IBM Plex Sans", Helvetica, sans-serif;
   font-weight: 400;
   font-size: 14px;
   color: #fff;
-  margin: 0 0 0 30px;
+
+  @include onPhone {
+    margin: 16px 0 0;
+    width: 280px;
+  }
+
+  
+  @include onTablet {
+    margin: 0;
+    width: 170px;
+  }
+
+  @include onDesctop {
+    width: 170px;
+    margin: 0;
+  }
+  
 }
 
 .menu__second-block {
