--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./reset";
+
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/title.scss";
+@import "./blocks/event-type.scss";
+@import "./blocks/event-date.scss";
+@import "./blocks/events.scss";
+@import "./blocks/event.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
