--- a/src/styles/utils/_footer.scss
+++ b/src/styles/utils/_footer.scss
@@ -46,6 +46,24 @@
         margin-right: 38px;
       }
     }
+
+    &__instagram {
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        background-image: url(../images/signs/roundInstagram.svg);
+        width: 10px;
+        height: 10px;
+        left: 28%;
+        bottom: 60%;
+        border-radius: 50%;
+
+        @include onTablet {
+          bottom: 40%;
+        }
+      }
+    }
   }
 
   &__logo {
@@ -133,13 +151,16 @@
       margin-bottom: 20px;
 
       &__item {
-        @include schedule;
-        color: $colorFooter;
+        &__link {
+          @include schedule;
+          color: $colorFooter;
+          text-decoration: none;
 
-        transition: transform 300ms;
+          transition: transform 300ms;
 
-        &:hover {
-          color: $colorGreen;
+          &:hover {
+            color: $colorGreen;
+          }
         }
       }
     }
