--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -146,66 +146,69 @@
     }
 
     &__tickets {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 0 23px;
-      border: 1px solid $colorGreen;
-
-      @include onTablet {
-        margin: 0 0 0 35px;
-        width: 260px;
-      }
-
-      @include onDesktop {
-        margin: 0;
-        margin-left: 218px;
-        width: 260px;
-      }
-
-      &__item {
-        padding-left: 50px;
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        color: $colorText;
-        z-index: 0;
-      }
-
-      &__right {
-        margin: 0;
-        position: relative;
-        background-image: url(../images/signs/Rectangle.svg);
-        background-repeat: no-repeat;
-        height: 50px;
-        width: 50px;
-        z-index: 0;
-        transition: transform 300ms;
-
-        &:hover {
-          background-image: none;
-          background-color: red;
-        }
+      text-decoration: none;
+      &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 23px;
+        border: 1px solid $colorGreen;
 
         @include onTablet {
-          height: 70px;
-          width: 70px;
+          margin: 0 0 0 35px;
+          width: 260px;
         }
 
-        &::after {
-          content: "";
-          display: inline-block;
-          position: absolute;
-          top: 40%;
-          right: 42%;
-          background-image: url(../images/signs/right-white.svg);
+        @include onDesktop {
+          margin: 0;
+          margin-left: 218px;
+          width: 260px;
+        }
+
+        &__item {
+          padding-left: 50px;
+          font-family: "IBM Plex Sans", sans-serif;
+          font-weight: 500;
+          font-size: 16px;
+          color: $colorText;
+          text-decoration: none;
+        }
+
+        &__right {
+          margin: 0;
+          position: relative;
+          background-image: url(../images/signs/Rectangle.svg);
           background-repeat: no-repeat;
-          width: 7px;
-          height: 12px;
-          z-index: 1;
+          height: 50px;
+          width: 50px;
+          z-index: 0;
+          transition: transform 300ms;
+
+          &:hover {
+            background-image: none;
+            background-color: red;
+          }
 
           @include onTablet {
-            top: 43%;
+            height: 70px;
+            width: 70px;
+          }
+
+          &::after {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 40%;
+            right: 42%;
+            background-image: url(../images/signs/right-white.svg);
+            background-repeat: no-repeat;
+            width: 7px;
+            height: 12px;
+            z-index: 1;
+
+            @include onTablet {
+              top: 43%;
+            }
           }
         }
       }
