--- a/src/styles/utils/_events.scss
+++ b/src/styles/utils/_events.scss
@@ -46,7 +46,7 @@
         transition: transform 300ms;
 
         &:hover {
-          transform: scaleY(1.1);
+          transform: scale(1.1);
         }
       }
     }
