--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -28,4 +28,49 @@
     display: flex;
     justify-content: center;
   }
+
+  &__slideshow-container {
+    max-width: 340px;
+    position: relative;
+    margin: auto;
+
+    &__photo {
+      width: 100%;
+    }
+
+    &__mySlides {
+      display: none;
+    }
+  }
+
+  &__fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  // @keyframes fade {
+  //   from {opacity: .4}
+  //   to {opacity: 1}
+  // }
+
+  &__items {
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  &__dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #e0e0e0;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  &__dot:active,
+  &__dot:hover {
+    background-color: $colorGreen;
+  }
 }
