--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$color-text-main: #0F0E08;
+$color-text-secondary: #4E4E4E;
+$color-text-light: #687480;
+$color-pagination:#E0E0E0;
+
+$color-white: #fff;
+$color-green: #1a5a4c;
+$color-red: #F14A27;
+
+$font-main: "IBM Plex Sans", sans-serif;
+$font-title: "Montserrat", sans-serif;
+
+$transition: 0.3s linear;
