--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,99 @@
+%top-actions {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 24px 1fr;
+  column-gap: 27px;
+
+  @include onTablet {
+    column-gap: 37px;
+  }
+
+  @include onTablet {
+    column-gap: 102px;
+  }
+}
+
 %h1 {
-  font-family: "Roboto", sans-serif;
+  margin: 0;
+  font-family: $font-title;
+  font-size: 4.5rem;
+  line-height: 4.5rem;
+  font-weight: 700;
+  color: #000;
+
+  @include onTablet {
+    font-size: 5.4rem;
+    line-height: 6.5rem;
+  }
+
+  @include onDesktop {
+    font-size: 7.2rem;
+    line-height: 8.6rem;
+  }
+}
+
+%h2 {
+  margin: 0;
+  font-family: $font-title;
+  font-size: 3.6rem;
+  line-height: 3.6rem;
+  font-weight: 700;
+
+  @include onTablet {
+    font-size: 4.8rem;
+    line-height: 4.8rem;
+  }
+}
+
+%h3 {
+  margin: 0;
+  font-family: $font-title;
+  font-size: 2.8rem;
+  line-height: 2.8rem;
+  font-weight: 400;
+
+  @include onTablet {
+    font-size: 3.6rem;
+    line-height: 3.6rem;
+  }
+}
+
+%h4 {
+  margin: 0;
+  font-family: $font-main;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 700;
+
+  @include onTablet {
+    font-size: 1.4rem;
+    line-height: 2.1rem;
+  }
+}
+
+%h5 {
+  margin: 0;
+  font-family: $font-main;
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  font-weight: 500;
+  @include onTablet {
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+  }
+}
+
+%text-main {
+  font-family: $font-main;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 300;
+}
+
+%text-add {
+  margin: 0;
+  font-family: $font-main;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
   font-weight: 400;
 }
