--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -8,7 +8,7 @@
     padding: 47px 0 35px;
   }
 
-  &__components{
+  &__components {
     @include onDesktop {
       display: flex;
       margin-bottom: 22px;
@@ -16,12 +16,12 @@
   }
   &__info {
     @include onTablet {
-    display: flex;
-    padding-bottom: 64px;
+      display: flex;
+      padding-bottom: 64px;
     }
   }
 
-  &__top{
+  &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +35,7 @@
       align-items: baseline;
     }
     @include onDesktop {
-    margin-right: 130px;
+      margin-right: 130px;
     }
   }
 
@@ -46,20 +46,20 @@
   }
 
   &__media {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    list-style: none;
 
-  @include onTablet {
-    width: 100%;
-  }
+    @include onTablet {
+      width: 100%;
+    }
 
     &-item {
-    height: 24px;
-    width: 24px;
+      height: 24px;
+      width: 24px;
 
-      &:first-child{
+      &:first-child {
         margin-right: 26px;
         @include onTablet {
           margin-right: 32px;
@@ -76,20 +76,20 @@
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
     @include onTablet {
-    margin: 0;
-    padding:0 26px 64px 0;
+      margin: 0;
+      padding: 0 26px 64px 0;
     }
 
     @include onDesktop {
-    margin-bottom: 0;
-    padding: 0 65px 0 0;
-    border-bottom: none;
-    border-right: 1px solid rgba(26, 90, 76, 0.5);
+      margin-bottom: 0;
+      padding: 0 65px 0 0;
+      border-bottom: none;
+      border-right: 1px solid rgba(26, 90, 76, 0.5);
     }
   }
 
   &__content {
-  display: flex;
+    display: flex;
   }
 
   &__schedule {
@@ -107,16 +107,16 @@
     }
   }
 
-  &__contacts{
-      max-width: 195px;
+  &__contacts {
+    max-width: 195px;
 
-      @include onDesktop {
-        max-width: 168px;
-      }
-
+    @include onDesktop {
+      max-width: 168px;
+    }
   }
 
   &__button {
+    box-sizing: border-box;
     display: block;
     margin: 0 0 0 auto;
     width: 50px;
@@ -125,13 +125,19 @@
     border: 1px solid $color-green;
     border-radius: 50%;
     background-color: transparent;
+    cursor: pointer;
+
+    &:hover {
+      background-color: lighten($color: $color-green, $amount: 70%);
+      border-color: lighten($color: $color-green, $amount: 70%);
+    }
 
     @include onTablet {
       display: none;
     }
   }
 
-   &__nav {
+  &__nav {
     background-color: $color-white;
     color: $color-text-main;
     margin-bottom: 78px;
@@ -145,8 +151,8 @@
   }
 
   &__link {
-  font-weight: 400;
-  font-size: 1.4rem;
-  line-height: 1.4rem;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
   }
 }
