--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -7,6 +7,9 @@
   background-repeat: no-repeat;
   text-decoration: none;
 
+  &:hover {
+    opacity: 0.7;
+  }
 
   &--menu {
     background-image: url(../images/icons/menu.svg);
@@ -27,5 +30,4 @@
   &--scroll-up {
     background-image: url(../images/icons/scroll-up.svg);
   }
-
 }
