--- a/src/styles/blocks/pagination.scss
+++ b/src/styles/blocks/pagination.scss
@@ -12,13 +12,19 @@
     height: 9px;
     border-radius: 50%;
     background-color: $color-pagination;
+    cursor: pointer;
+    transition: all $transition;
 
-    &:not(:last-child){
-    margin-right: 22px;
+    &:not(:last-child) {
+      margin-right: 22px;
     }
 
+    &:hover {
+      background-color: lighten($color: $color-green, $amount: 20%);
+    }
     &--active {
-    background-color: $color-green;
+      background-color: $color-green;
+      pointer-events: none;
     }
   }
 }
