--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,11 +1,11 @@
-$color-text-main: #0F0E08;
-$color-text-secondary: #4E4E4E;
+$color-text-main: #0f0e08;
+$color-text-secondary: #4e4e4e;
 $color-text-light: #687480;
-$color-pagination:#E0E0E0;
+$color-pagination:#e0e0e0;
 
 $color-white: #fff;
 $color-green: #1a5a4c;
-$color-red: #F14A27;
+$color-red: #f14a27;
 
 $font-main: "IBM Plex Sans", sans-serif;
 $font-title: "Montserrat", sans-serif;
