--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -1,23 +1,29 @@
 .exhibition {
+
   @include onDesktop {
-  display: grid;
-  grid-template-columns: repeat(12, 70px);
-  column-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(12, 70px);
+    column-gap: 30px;
   }
 
-  &__img-container{
+  &__img-container {
+    margin-bottom: 16px;
     width: 100%;
     height: 210px;
     overflow: hidden;
-    margin-bottom: 16px;
+    transition: all $transition;
+
+    &:hover {
+      transform: scale(1.03);
+    }
 
     @include onTablet {
-    margin-bottom: 40px;
-    height: 520px;
+      margin-bottom: 40px;
+      height: 520px;
     }
 
     @include onDesktop {
-    grid-column: 1 / 8;
+      grid-column: 1 / 8;
     }
   }
 
@@ -32,7 +38,8 @@
     @include onTablet {
       max-width: 460px;
     }
-     @include onDesktop {
+
+    @include onDesktop {
       grid-column: 9 / 13;
       align-self: center;
       padding-bottom: 24px;
@@ -53,35 +60,36 @@
   &__name {
     text-transform: uppercase;
     margin-right: 58px;
-     @include onTablet {
+
+    @include onTablet {
       margin-right: 28px;
-     }
+    }
   }
 
   &__date {
-  color: $color-green;
+    color: $color-green;
   }
 
   &__title {
-  margin-bottom: 11px;
+    margin-bottom: 11px;
 
-  @include onTablet {
-    margin-bottom: 15px;
-  }
+    @include onTablet {
+      margin-bottom: 15px;
+    }
 
-  &::after {
-    content: "";
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin-left: 10px;
-    background-color: $color-red;
-    transform: translateY(-25%);
+    &::after {
+      content: "";
+      display: inline-block;
+      margin-left: 10px;
+      width: 10px;
+      height: 10px;
+      background-color: $color-red;
+      transform: translateY(-25%);
 
       @include onTablet {
-      width: 15px;
-      height: 15px;
-      margin-left: 20px;
+        margin-left: 20px;
+        width: 15px;
+        height: 15px;
       }
     }
   }
