--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -11,58 +11,69 @@
   &__title {
     margin-right: 20px;
   }
+
   &__pagination {
     margin-right: 20px;
+
     @include onTablet {
       margin-right: 34px;
     }
   }
 
   &__slider {
-  display: grid;
-  grid-template-columns: repeat(4, 280px);
-  column-gap: 16px;
-  overflow: hidden;
-  margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 280px);
+    column-gap: 16px;
+    margin-bottom: 20px;
 
-  @include onTablet {
-    grid-template-columns: repeat(4, 340px);
-    column-gap: 20px;
-    margin-bottom: 32px;
+    @include onTablet {
+      grid-template-columns: repeat(4, 340px);
+      column-gap: 20px;
+      margin-bottom: 32px;
     }
 
-  @include onDesktop {
-    grid-template-columns: repeat(12, 70px);
-    gap: 30px;
-    justify-content: center;
+    @include onDesktop {
+      grid-template-columns: repeat(12, 70px);
+      gap: 30px;
+      justify-content: center;
     }
   }
 
-  &__img-container{
+  &__img-container {
     width: 100%;
     height: 410px;
     overflow: hidden;
-     @include onTablet {
-     height: 543px;
-     }
-     @include onDesktop {
-      &--1{
+    transition: all $transition;
+
+    &:hover {
+      transform: scale(1.03);
+    }
+
+    @include onTablet {
+      height: 543px;
+    }
+
+    @include onDesktop {
+      &:nth-child(1) {
         height: 600px;
         grid-column: 1 / 5;
       }
-      &--2{
+
+      &:nth-child(2) {
         height: 600px;
         grid-column: 5 / 13;
       }
-      &--3{
+
+      &:nth-child(3) {
         height: 360px;
         grid-column: 1 / 9;
       }
-      &--4{
+
+      &:nth-child(4) {
         height: 360px;
         grid-column: 9 / 13;
       }
-     }
+    }
   }
 
   &__img {
