--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -1,16 +1,23 @@
 .lecture {
- padding-top: 8px;
- @include onTablet {
- padding-top: 45px;
- }
- @include onDesktop {
- padding-top: 0;
- }
+  padding-top: 8px;
 
-  &__img-container{
+  @include onTablet {
+    padding-top: 45px;
+  }
+
+  @include onDesktop {
+    padding-top: 0;
+  }
+
+  &__img-container {
     width: 100%;
     height: 210px;
     overflow: hidden;
+    transition: all $transition;
+
+    &:hover {
+      transform: scale(1.03);
+    }
 
     @include onTablet {
       height: 390px;
@@ -35,14 +42,16 @@
     padding: 20px 0;
     transform: translateY(-41%);
     background-color: $color-white;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
     @include onTablet {
       padding: 45px 55px 50px;
       max-width: 570px;
     }
+
     @include onDesktop {
       padding: 45px 100px 50px;
-       transform: translateY(-50%);
+      transform: translateY(-50%);
     }
   }
 
@@ -61,24 +70,27 @@
   }
 
   &__name {
-    text-transform: uppercase;
     margin-right: 24px;
+    text-transform: uppercase;
+
     @include onTablet {
       margin-right: 188px;
     }
+
     @include onDesktop {
       margin-right: 148px;
     }
   }
 
   &__date {
-  color: $color-green;
+    color: $color-green;
   }
 
   &__title {
-  text-align: center;
-   @include onTablet {
-   text-align: start;
-   }
-}
+    text-align: center;
+
+    @include onTablet {
+      text-align: start;
+    }
+  }
 }
