--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -17,7 +17,7 @@
     @extend %top-actions;
 
     @include onTablet {
-      margin-bottom: 0px;
+      margin-bottom: 0;
       padding: 0 38px 0 0;
       column-gap: 38px;
       border-bottom-color: transparent;
@@ -46,13 +46,13 @@
       border-right-color: $color-white;
     }
     @include onDesktop {
-       grid-template-columns: repeat(2, 170px);
-       gap: 30px 30px;
+      grid-template-columns: repeat(2, 170px);
+      gap: 30px 30px;
     }
 
     &--footer {
-    grid-template-columns: repeat(2, 130px);
-    gap: 20px;
+      grid-template-columns: repeat(2, 130px);
+      gap: 20px;
 
       @include onTablet {
         grid-template-columns: repeat(2, 220px);
@@ -74,7 +74,13 @@
     line-height: 1.6rem;
     text-decoration: none;
     color: inherit;
-    // transition: $transition;
+    transition: $transition;
+
+    &:hover {
+      opacity: 0.7;
+      text-decoration: underline;
+    }
+
     @include onDesktop {
       font-size: 2.2rem;
       line-height: 2.2rem;
