add menu and slider

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,14 +1,4 @@
 .event {
-  margin-bottom: 183px;
-
-  @include onTablet {
-    margin-bottom: 208px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 302px;
-  }
-
   &__outer-image {
     width: 100%;
 
@@ -53,7 +43,7 @@
     padding: 20px 0;
 
     background-color: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
       bottom: -120px;
