--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,13 +1,5 @@
 .gallery {
-  margin-bottom: 100px;
-
-  @include onTablet {
-    margin-bottom: 92px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 200px;
-  }
+  overflow: hidden;
 
   &__title {
     margin-bottom: 40px;
