--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,15 +2,9 @@
   position: relative;
 
   padding-top: 9px;
-  margin-bottom: 70px;
 
   @include onTablet {
     padding-top: 15px;
-    margin-bottom: 88px;
-  }
-
-  @include onDesktop {
-    margin-bottom: 200px;
   }
 
   &__top {
@@ -41,6 +35,13 @@
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
+
+    transition: background-image 0.3s;
+    will-change: background-image;
+
+    &:hover {
+      background-image: url(../images/icons/burger-red.svg);
+    }
   }
 
   &__logo-wrapper {
@@ -85,7 +86,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #0F0E08;
+    color: $darkColor;
     text-transform: uppercase;
     text-decoration: none;
     border: 1px solid $darkGreenColor;
