--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,9 @@
 @import "./blocks/container.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/page.scss";
-@import "./blocks/header.scss";
 @import "./blocks/title.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/event-type.scss";
 @import "./blocks/event-date.scss";
 @import "./blocks/events.scss";
