--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -46,16 +46,18 @@
 
     &:nth-child(1) {
       background-image: url(../images/icons/facebook.svg);
-
-      &:hover {
-        background-image: url(../images/icons/facebook-red.svg);
-      }
     }
 
     &:nth-child(2) {
       background-image: url(../images/icons/instagram.svg);
+    }
 
-      &:hover {
+    &:hover {
+      &:nth-child(1) {
+        background-image: url(../images/icons/facebook-red.svg);
+      }
+
+      &:nth-child(2) {
         background-image: url(../images/icons/instagram-red.svg);
       }
     }
