--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -58,7 +58,7 @@
     flex-grow: 1;
     padding: 0 24px;
 
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-size: 14px;
     line-height: 100%;
 
