--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,5 +1,5 @@
 .title {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 100%;
