fix footer's link

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -41,7 +41,7 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    transition: background-image 0.3s;
+    transition: background-image $duration;
     will-change: background-image;
 
     &:nth-child(1) {
@@ -105,6 +105,17 @@
 
   &__bold {
     font-weight: 600;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: inherit;
+
+    transition: color $duration;
+
+    &:hover {
+      color: $redColor;
+    }
   }
 
   &__to-up-wrapper {
@@ -210,7 +221,7 @@
 
       background-color: $redColor;
 
-      transition: width 0.3s;
+      transition: width $duration;
     }
 
     &:hover::after {
