--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -36,7 +36,7 @@
     background-repeat: no-repeat;
     cursor: pointer;
 
-    transition: background-image 0.3s;
+    transition: background-image $duration;
     will-change: background-image;
 
     &:hover {
@@ -124,7 +124,7 @@
     }
 
     &:hover::after {
-      animation: moveLeftRight 0.6s;
+      animation: moveLeftRight $duration * 2;
     }
 
     @keyframes moveLeftRight {
@@ -183,7 +183,7 @@
     }
 
     &:hover {
-      animation: moveDownUp 0.6s;
+      animation: moveDownUp $duration * 2;
     }
 
     @keyframes moveDownUp {
