--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,7 @@
 
   background-color: $darkGreenColor;
 
-  transition: transform 0.3s;
+  transition: transform $duration;
 
   @include onTablet {
     padding: 40px 0;
@@ -57,7 +57,7 @@
     background-repeat: no-repeat;
     cursor: pointer;
 
-    transition: transform 0.3s;
+    transition: transform $duration;
     will-change: transform;
 
     @include onTablet {
