--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -20,7 +20,7 @@
       margin-bottom: 32px;
     }
 
-    transition: transform 0.3s;
+    transition: transform $duration;
   }
 
   &__slide {
@@ -49,7 +49,7 @@
     border-radius: 50%;
     background-color: #e0e0e0;
 
-    transition: background-color 0.3s;
+    transition: background-color $duration;
 
     &--active {
       background-color: $darkGreenColor;
