--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -85,7 +85,7 @@
     background-repeat: no-repeat;
     cursor: pointer;
 
-    transition: background-color 0.3s;
+    transition: background-color $duration;
 
     @include onTablet {
       width: 70px;
