--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+
+@import "blocks/page.scss";
+@import "blocks/logo.scss";
+@import "blocks/header.scss";
+@import "blocks/arrow-block.scss";
+@import "blocks/container.scss";
+@import "blocks/menu.scss";
+@import "blocks/section-podiji.scss";
+@import "blocks/galery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/general-grid.scss";
+@import "blocks/contacts.scss";
+@import "blocks/cred.scss";
+@import "blocks/arrow-menu.scss";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-  background: $c-gray;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
