add requested changes

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,9 +1,6 @@
 .event {
-  &__outer-image {
-    width: 100%;
-
-    object-fit: cover;
-    object-position: center;
+  &__outer-image-wrapper {
+    overflow: hidden;
 
     @include onTablet {
       display: none;
@@ -19,9 +16,9 @@
     position: relative;
   }
 
-  &__inner-image {
+  &__inner-image-wrapper {
     display: none;
-    width: 100%;
+    overflow: hidden;
 
     @include onTablet {
       display: block;
