--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -27,8 +27,9 @@
     }
   }
 
-  &__item-image {
-    width: 100%;
+  &__image-wrapper {
+    overflow: hidden;
+
     margin-bottom: 16px;
 
     @include onTablet {
