--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -21,11 +21,8 @@
     }
   }
 
-  &__image {
-    width: 100%;
-
-    object-fit: cover;
-    object-position: center;
+  &__image-wrapper {
+    overflow: hidden;
 
     &:nth-child(1) {
       grid-column: 1 / 5;
