--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,9 @@
 @import "./blocks/page.scss";
 @import "./blocks/title.scss";
 @import "./blocks/header.scss";
+@import "./blocks/nav-link.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/image.scss";
 @import "./blocks/event-type.scss";
 @import "./blocks/event-date.scss";
 @import "./blocks/events.scss";
