--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -105,5 +105,11 @@
       grid-column: 5 / span 3;
       padding-right: 35px;
     }
+
+    &-links {
+      text-decoration: none;
+      color: #0f0e08;
+    }
   }
+
 }
