--- a/src/styles/utils/_grid.scss
+++ b/src/styles/utils/_grid.scss
@@ -5,7 +5,7 @@
 
   @include onTablet {
     grid-template-columns: repeat(6, 1fr);
-    column-gap: 30px;
+    // column-gap: 30px;
   }
 
   @include onDesktop {
