--- a/src/styles/utils/_subscription.scss
+++ b/src/styles/utils/_subscription.scss
@@ -90,6 +90,7 @@
 
       @include onTablet {
         margin-right: 20px;
+        height: 70px;
       }
 
       @include onDesktop {
@@ -123,15 +124,17 @@
   &__form__email {
     margin: 0;
     position: relative;
-    background-image: url(../images/signs/Orange.svg);
-    background-repeat: no-repeat;
+    background-color: $colorOrange;
     top: -50px;
     left: 0;
     height: 50px;
     width: 50px;
+    border: 0;
     z-index: 1;
 
     @include onTablet {
+      height: 70px;
+      width: 70px;
       left: 5%;
       top: 0;
     }
@@ -149,9 +152,13 @@
       z-index: 1;
 
       @include onTablet {
-        top: 40%;
+        top: 43%;
         right: 42%;
-        z-index: 1;
+      }
+
+      @include onDesktop {
+        top: 45%;
+        right: 45%;
       }
     }
   }
