--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -24,30 +24,105 @@
     }
   }
 
-  &__image {
-    display: flex;
-    justify-content: center;
-  }
-
   &__slideshow-container {
     position: relative;
+
     margin: auto;
 
-    &__photo {
-      height: 460px;
-      width: 100%;
+    @include onTablet {
+      display: flex;
+      margin-bottom: 38px;
+    }
 
-      @include onTablet {
-        height: 543px;
+    @include onDesktop {
+      display: grid;
+    }
+
+    &__mySlides {
+      overflow: hidden;
+      // display: none;
+
+      // &--desktop {
+      //   @include onDesktop {
+      //     margin-bottom: 30px;
+      //   }
+      // }
+
+      &--1 {
+        background-image: url(../images/photos/gallery/1.svg);
+        background-size: cover;
+        width: 100%;
+        height: 530px;
+
+        @include onTablet {
+          height: 543px;
+        }
+
+        @include onDesktop {
+          height: 600px;
+          margin-bottom: 30px;
+        }
       }
 
-      @include onDesktop {
-        height: 600px;
+      &--2 {
+        @include onDesktop {
+          margin-bottom: 30px;
+          background-image: url(../images/photos/gallery/2.svg);
+          background-size: cover;
+          width: 100%;
+          height: 600px;
+        }
+      }
+
+      &--3 {
+        @include onDesktop {
+          background-image: url(../images/photos/gallery/3.svg);
+          background-size: cover;
+          width: 100%;
+          height: 600px;
+        }
+      }
+
+      &--4 {
+        @include onDesktop {
+          background-image: url(../images/photos/gallery/4.svg);
+          background-size: cover;
+          width: 100%;
+          height: 600px;
+        }
+      }
+
+      &--5 {
+        @include onTablet {
+          background-image: url(../images/photos/gallery/5.svg);
+          background-size: cover;
+          width: 100%;
+          height: 543px;
+          // transform: translateY(-100%);
+        }
+
+        @include onDesktop {
+          display: none;
+        }
       }
     }
 
-    // &__mySlides {
-    //   display: none;
+    // &__photo {
+    //   height: 460px;
+    //   width: 100%;
+
+    //   @include onTablet {
+    //     // width: auto;
+    //     height: 543px;
+    //     // object-fit: contain;
+    //     // object-position: center;
+    //   }
+
+    //   @include onDesktop {
+    //     background-size: cover;
+    //     width: 100%;
+    //     height: 600px;
+    //   }
     // }
   }
 
@@ -66,6 +141,8 @@
     text-align: center;
 
     @include onTablet {
+      display: flex;
+      justify-content: center;
       align-items: center;
     }
   }
