fixed transition-duration for hover, header-button and footer-menu

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -16,6 +16,7 @@
   &__arrow {
     background: url(../images/icons/arrow_right.svg) $color-green no-repeat center;
     box-sizing: border-box;
+    transition: all $transition;
   }
 
   &:hover {
