--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -154,5 +154,14 @@
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 1.4rem;
+    transition: all $transition;
+
+    &:hover {
+    font-weight: 400;
+    color: $color-green;
+    text-decoration: underline $color-green 2px;
+    text-underline-offset: 4px;
+    }
   }
+
 }
