--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,7 +5,8 @@
   line-height: 3rem;
   color: $color-text-main;
   text-decoration: none;
-  
+  transition: all $transition;
+
   &:hover {
     opacity: 0.7;
     transform: scale(1.1);
