--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -74,7 +74,7 @@
     line-height: 1.6rem;
     text-decoration: none;
     color: inherit;
-    transition: $transition;
+    transition: all $transition;
 
     &:hover {
       opacity: 0.7;
