--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,4 +10,4 @@ $color-red: #f14a27;
 $font-main: "IBM Plex Sans", sans-serif;
 $font-title: "Montserrat", sans-serif;
 
-$transition: 0.3s linear;
+$transition: 0.3s ease-in;
