--- a/src/styles/utils/_header-menu.scss
+++ b/src/styles/utils/_header-menu.scss
@@ -1,6 +1,6 @@
 .menu {
   box-sizing: border-box;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -12,6 +12,17 @@
 
   &:target {
     transform: translateY(0);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: $colorGrey;
+    opacity: 60%;
   }
 
   &__container {
