--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./blocks/page.scss";
+@import "./blocks/grid-cover.scss";
+@import "./blocks/container.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/form.scss";
+@import "./blocks/events.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/separator.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/networks.scss";
+@import "./blocks/contact-us.scss";
