--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -119,8 +119,12 @@
       }
 
       @include onDesktop {
-        margin: 0 -136px;
+        margin: 0 -55px;
         padding-bottom: 550px;
+      }
+
+      @include onDesign {
+        margin: 0 -136px;
       }
     }
   }
