--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -52,10 +52,14 @@
     }
 
     @include onDesktop {
-      margin: 0 -136px 0 0;
+      margin: 0 -55px 0 0;
       grid-column: 6 / 13;
       background-image: url(../images/header-desktop-image.jpg);
       padding-bottom: 655px;
+    }
+
+    @include onDesign {
+      margin: 0 -136px 0 0;
     }
   }
 
