--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -23,7 +23,7 @@
       background-image: url(../images/subscription-photo-desktop.jpg);
     }
 
-    @include onDesktop {
+    @include onDesign {
       margin: 0 -136px;
     }
   }
