--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,30 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/reset";
+@import "./utils/extends";
+@import "./utils/mixins";
+@import "./blocks/grid.scss";
+@import "./blocks/header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/sections.scss";
+@import "./blocks/footer.scss";
 
-body {
-  background: $c-gray;
+.body {
+  background-color: #e5e5e5;
+}
+.body-menu {
+  overflow: hidden;
+
+}
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+
+  padding: 15px 55px;
+  @media (max-width: 1279px) {
+    padding: 15px 34px;
+  }
+  @media (max-width: 767px) {
+    padding: 9px 20px;
+  }
 }
