--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,52 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+html {
+  font-family: "IBM Plex Sans", sans-serif;
+  scroll-behavior: smooth;
 }
+
+h1,
+h2,
+h3,
+.nav__logo {
+  font-family: "Montserrat", sans-serif;
+}
+h1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 86px;
+  color: #000;
+  @media (max-width: 1279px) {
+    font-size: 54px;
+    line-height: 65px;
+  }
+  @media (max-width: 767px) {
+    text-align: center;
+    font-size: 45px;
+    line-height: 45px;
+  }
+}
+h2 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  color: #0f0e08;
+
+  @media (max-width: 767px) {
+    text-align: center;
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+h3 {
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+  color: #0F0E08;
+
+  @media (max-width: 767px) {
+    font-size: 28px;
+    line-height: 28px;
+  }
+}
+
+
