MUSEUM-LANDING-FIXED

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -20,4 +20,14 @@
     line-height: 150%;
     color: $black-color;
   }
+
+  &__info-link {
+    text-decoration: none;
+    color: $black-color;
+    transition: text-shadow 0.3s;
+
+    &:hover {
+      text-shadow: 3px 5px 6px $black-color;
+    }
+  }
 }
