--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/fonts";
+@import "utils/mixins";
+@import "utils/vars";
+@import "utils/normalize";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/page.scss";
+@import "blocks/icon.scss";
+@import "blocks/logo.scss";
+@import "blocks/grid.scss";
+@import "blocks/work-schedule.scss";
+@import "blocks/current-events.scss";
+@import "blocks/exhibit.scss";
+@import "blocks/lecture.scss";
+@import "blocks/gallery.scss";
+@import "blocks/slider.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
