--- a/src/styles/utils/_footer.scss
+++ b/src/styles/utils/_footer.scss
@@ -82,6 +82,7 @@
     justify-content: center;
 
     &__block {
+      flex-basis: 50%;
       margin: 0 20px 20px 0;
       max-width: 200px;
       @include onTablet {
@@ -132,6 +133,7 @@
     }
 
     &__contact {
+      flex-basis: 50%;
       max-width: 200px;
     }
 
