--- a/src/styles/utils/_header-menu.scss
+++ b/src/styles/utils/_header-menu.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background-color: $colorGreen;
+  bottom: 0;
   z-index: 1;
 
   transform: translateY(-100%);
@@ -14,28 +14,31 @@
     transform: translateY(0);
   }
 
-  &::after {
+  &::before {
     content: "";
     position: absolute;
-    top: 100%;
+    top: 0;
     left: 0;
     height: 100vh;
     width: 100%;
     background-color: $colorGrey;
-    opacity: 60%;
+    opacity: 0.7;
   }
 
   &__container {
+    position: relative;
     display: flex;
-    margin: 27px 20px;
+    padding: 27px 20px;
+    margin: 0;
     min-width: min-content;
+    background-color: $colorGreen;
 
     @include onTablet {
-      margin: 40px 35px;
+      padding: 40px 35px;
     }
 
     @include onDesktop {
-      margin: 40px 50px 48px;
+      padding: 40px 50px 48px;
     }
   }
 
