--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -32,7 +32,7 @@
 
     &__container {
       display: flex;
-      margin: 9px 23px 0;
+      margin: 0 23px;
       line-height: 61px;
 
       @include onTablet {
@@ -49,7 +49,7 @@
     }
 
     &__link {
-      margin-right: 91px;
+      margin: 9px 91px 0 0;
       z-index: 1;
 
       @include onTablet {
@@ -66,7 +66,7 @@
     }
 
     &__logo {
-      margin-bottom: 250px;
+      margin: 9px 0 250px;
       z-index: 1;
 
       @include onTablet {
