MUSEUM-LANDING-PAGE-FIXED-2

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -70,6 +70,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 17%;
+    cursor: pointer;
 
     @include onTablet {
       width: 70px;
