add task solution

--- a/src/styles/blocks/exhibit.scss
+++ b/src/styles/blocks/exhibit.scss
@@ -33,7 +33,7 @@
   }
 
   &__event {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -48,14 +48,13 @@
   }
 
   &__date {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
 
-    color: #1A5A4C;
-
+    color: #1a5a4c;
 
     @include onTablet {
       font-size: 14px;
@@ -68,13 +67,13 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
     line-height: 28px;
 
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       margin-bottom: 15px;
@@ -87,8 +86,7 @@
       content: "";
       height: 10px;
       width: 10px;
-      background-color: #F14A27;
-
+      background-color: #f14a27;
     }
   }
 
@@ -98,19 +96,18 @@
       margin-right: 40px;
       height: 10px;
       width: 10px;
-      background-color: #F14A27;
-
+      background-color: #f14a27;
     }
   }
 
   &__description {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
     line-height: 24px;
 
-    color: #4E4E4E;
+    color: #4e4e4e;
   }
 
   &__info {
