--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 210px;
-    margin: 0 -20px 0;
+    margin: 0 -20px;
 
     @include onTablet {
       margin: 0;
@@ -17,7 +17,7 @@
 
     @include onDesktop {
       height: 550px;
-      margin: 0 -55px 0;
+      margin: 0 -55px;
     }
   }
 
@@ -31,7 +31,6 @@
     transform: translate(-50%, 60%);
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-
 
     @include onTablet {
       width: 570px;
@@ -63,7 +62,7 @@
   }
 
   &__event {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -73,24 +72,24 @@
   }
 
   &__date {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
 
-    color: #1A5A4C;
+    color: #1a5a4c;
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
     line-height: 28px;
     text-align: center;
 
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       font-size: 36px;
