--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -11,7 +11,7 @@
     padding-left: 162px;
     padding-right: 102px;
     border-bottom: none;
-   }
+  }
 
   &__list {
     display: flex;
@@ -40,13 +40,13 @@
 
   &__link {
     text-decoration: none;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
 
-    color: #FFFFFF;
+    color: #fff;
     transition: all 0.3s;
 
     @include onDesktop {
