--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -21,7 +21,7 @@
   &__title {
     margin-bottom: 20px;
 
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -37,7 +37,7 @@
   &__description {
     margin-bottom: 50px;
 
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -59,7 +59,7 @@
     height: 50px;
     padding: 18px 24px;
 
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
