--- a/src/styles/blocks/work-schedule.scss
+++ b/src/styles/blocks/work-schedule.scss
@@ -10,17 +10,16 @@
     border-left: 1px solid rgba(255, 255, 255, 0.5);
   }
 
-
   &__title {
     margin: 24px 0 20px;
 
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
 
-    color: #FFFFFF;
+    color: #fff;
 
     @include onTablet {
       margin: 0 0 20px;
@@ -44,7 +43,7 @@
 
   &__schedule {
     margin: 0 0 16px;
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -62,7 +61,6 @@
       width: 170px;
     }
   }
-
 
   &__day-off {
     width: 280px;
