--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,6 +1,6 @@
 .current-events {
   &__title {
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -8,7 +8,7 @@
     text-align: center;
     margin-bottom: 40px;
 
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       margin-bottom: 48px;
