--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -27,7 +27,7 @@
     background-position: center;
 
     @include onTablet {
-      margin: 0 -20px 0;
+      margin: 0 -20px;
       position: absolute;
       right: 20px;
       top: 0;
@@ -75,13 +75,13 @@
 
   &__title {
     margin-bottom: 20px;
-    font-family: 'Montserrat';
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
     text-align: center;
 
-    color: #000000;
+    color: #000;
 
     @include onTablet {
       margin: 0 0 38px;
@@ -105,7 +105,7 @@
     grid-template-columns: 1fr var(--button-width);
     align-items: center;
     justify-items: center;
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
     height: 50px;
 
     @include onTablet {
@@ -124,13 +124,13 @@
   }
 
   &__tickets-text {
-    font-family: 'IBM Plex Sans';
+    font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
 
-    color: #0F0E08;
+    color: #0f0e08;
   }
 
   &__button--container {
@@ -139,7 +139,7 @@
     align-items: center;
     width: 50px;
     height: 48px;
-    background-color: #1A5A4C;
+    background-color: #1a5a4c;
 
     @include onTablet {
       width: 70px;
